# repro-gpt4all

./: Dockerfile  README.md  pyproject.toml
src/tem/: __init__.py  summary
