[project]
name = "tem"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Richard Hajek", email = "richard.m.hajek@gmail.com" }
]
dependencies = [
    "gpt4all>=2.8.2",
    "nvidia-cublas-cu12>=12.6.0.22",
    "nvidia-cuda-runtime-cu12>=12.6.37",
    "pudb>=2024.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "tem:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tem"]
